[package]
name = "JustStone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8.33"
sysinfo = "0.30.1"
json = "0.12.4"
bstr = "1.8.0"
winreg = "0.52.0"
egui = "0.27.1"
lz4_flex = "0.8.1"
#winapi = { version = "0.3.9", features = ["winnt", "processthreadsapi", "securitybaseapi"] }
