[package]
name = "JustStone"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
encoding_rs = "0.8.33"
sysinfo = "0.30.1"
json = "0.12.4"
bstr = "1.8.0"
winreg = "0.52.0"
lz4_flex = "0.11.3"
rsa = "0.10.0-pre.1"
aes = "0.9.0-pre"
aes-gcm-siv = "0.11.1"
getrandom = "0.2.14"
rand = "0.8.5"
uuid = "1.8.0"
tokio = "1.37.0"
sha2 = "0.11.0-pre.3"
ratatui = { version = "0.27.0", features = ["all-widgets"] }

[profile.dev]
opt-level = 3

[features]


